--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -3,7 +3,7 @@
     <div id="waiting--for--approval">
       <div class="dashboard--writer--flex--main">
         <div class="flex--item">
-          <%= render 'profile' %>
+          <%= render :partial => 'profile', locals: {user: @user} %>
         </div>
         <div class="analytics card-group">
           <div class="card">
@@ -169,7 +169,7 @@
       loaded[0] = true;
     }
     if (($('#value2').isOnScreen()) && (!loaded[1])) {
-      animateValue('value2', 0, <%= @published_articles_cnt %>, 500);
+      animateValue('value2', 0, <%= @user_posts_approved.count %>, 500);
       loaded[1] = true;
     }
     if (($('#value3').isOnScreen()) && (!loaded[2])) {
