--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -279,6 +279,12 @@ $gray:  #2a2a2a;
 @media (max-width: 640px) {
   .post_info {
     flex-direction: column !important;
+    .left_side_flex {
+      flex-direction: column;
+    }
+    .right_side_wrapper {
+      margin-top: -57px;
+    }
     .social_icons {
       margin-bottom: 15px;
       justify-content: space-between;
