--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @user do |f| %>
 
-  <%= render 'profile' %>
+  <%= render :partial => 'profile', locals: {user: @user} %>
 
   <% if current_user.admin? || current_user.editor? %>
     <%= f.label "Approve profile" %>
