--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,34 +1,34 @@
 <div class="flex--profile">
-  <% if @user.profile.exists? %>
-    <%= image_tag(@user.profile.url(:square), :class => "profile_img") %>
+  <% if user.profile.exists? %>
+    <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
   <% else %>
     <%= image_tag("profile_image", :class => "profile_img") %>
   <% end %>
   <div class="info">
     <h2 style="margin-bottom: 5px;">
-      <%= link_to(@user.full_name, @user) %>
+      <%= link_to(user.full_name, user) %>
     </h2>
-    <% if @user.editor? %>
+    <% if user.editor? %>
       <span class="editor_status">Editor · <%= @editor_reviews.count %> edited articles · <%= @editor_pitches.count %> pitched topics · <%= @writers_helped.count %> writers helped  </span>
     <% end %>
-    <% if (@user.description != "" && @user.description != nil) %>
-      <p class="description_user" style="margin-top: 5px;"><%= @user.description %></p>
+    <% if (user.description != "" && user.description != nil) %>
+      <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
     <% end %>
     <div class="website">
-      <% if (@user.website != "" && @user.website !=  nil) %>
-         <p class="website_link"><span>Website: </span><a href="https://www.<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
+      <% if (user.website != "" && user.website !=  nil) %>
+         <p class="website_link"><span>Website: </span><a href="https://www.<%= user.website %>" target="_blank"><%= user.website %></a></p>
       <% end %>
-      <% if (@user.twitter != "" && @user.twitter !=  nil) %>
-         <p class="website_link"><a href="https://www.twitter.com/<%= @user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
+      <% if (user.twitter != "" && user.twitter !=  nil) %>
+         <p class="website_link"><a href="https://www.twitter.com/<%= user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
       <% end %>
-      <% if (@user.insta != "" && @user.insta != nil) %>
-         <p class="website_link"><a href="https://www.instagram.com/<%= @user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+      <% if (user.insta != "" && user.insta != nil) %>
+         <p class="website_link"><a href="https://www.instagram.com/<%= user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
       <% end %>
-      <% if (@user.facebook != "" && @user.facebook !=  nil) %>
-         <p class="website_link"><a href="https://www.facebook.com/<%= @user.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
+      <% if (user.facebook != "" && user.facebook !=  nil) %>
+         <p class="website_link"><a href="https://www.facebook.com/<%= user.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
       <% end %>
-      <% if (@user.youtube != "" && @user.youtube != nil) %>
-         <p class="website_link"><a href="https://www.youtube.com/<%= @user.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></p>
+      <% if (user.youtube != "" && user.youtube != nil) %>
+         <p class="website_link"><a href="https://www.youtube.com/<%= user.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></p>
       <% end %>
     </div>
   </div>
