--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -631,6 +631,7 @@ body {
   .date {
     font-size: 1rem;
     font-family: "Playfair Display";
+    white-space: nowrap;
   }
   .author {
     margin: 3px 0;
