fixed status and editing permissions for published collaborations

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -546,6 +546,10 @@ body {
    width: 100% !important;
 }
 
+.flex_column {
+  flex-direction: column !important;
+}
+
 .post_info {
   display: flex;
   flex-direction: row;
@@ -571,6 +575,9 @@ body {
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      p {
+        margin: 0.7em 0 0.5em 0;
+      }
     }
   }
 
