--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -38,7 +38,7 @@ blockquote {
                 </div>
               <% end %>
             </div>
-            <div class="right_side_wrapper <% if @authors.count < 3 %>right_side_flex<% end %>">
+            <div class="right_side_wrapper <% if @authors.count == 1 %>right_side_flex<% end %>">
               <div class="date_wrapper">
                 <i class="fa fa-clock-o" style="margin-right: 3px;" aria-hidden="true"></i>
                 <p class="date"><%= @date.strftime('%A, %B %d')%></p>
