fixed ads formatting css

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -894,6 +894,7 @@ p, ul, ol {
       padding: 0px !important;
       .ads_wrapper {
         margin: 0 -10% !important;
+        max-width: 120% !important;
         background-color: transparent;
         iframe {
           max-width: 100%;
