updated editor form to require feedback for rejecting article

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -86,7 +86,8 @@
       <% else %>
         <%= f.label "Article Status:" %>
         <% @rejected_cnt = @post.reviews.where(status: "Rejected").count %>
-        <% @statuses = current_user.editor? ? ["In Progress", "Ready for Review", "In Review", "Rejected", "Approved for Publishing"] : ["In Progress", "Ready for Review"] %>
+        <% @editor_options = (@post.reviews.last.status.eql? "In Review") ? ["Ready for Review", "In Review", "Rejected", "Approved for Publishing"] : ["Ready for Review", "In Review"] %>
+        <% @statuses = current_user.editor? ? @editor_options : ["In Progress", "Ready for Review"] %>
         <% if !(current_user.editor?) && !(@statuses.include? @post.reviews.last.status)%><% @statuses << @post.reviews.last.status %><% end %>
         <%= rv.select :status, options_for_select(@statuses, @review.try(:status)) %>
         <br>
@@ -114,6 +115,13 @@
     $("#edit_post").on("submit", function(event){
       var reply = true;
       var selected = document.getElementById('post_reviews_attributes_0_status').value;
+      var isChecked = $("input[type=checkbox]").is(":checked");
+      if (selected == "Rejected") {
+        if (!isChecked) {
+          reply=confirm("You need to select at least one reason for rejecting this article.");
+          return false;
+        }
+      }
       <% if !(@post.reviews.last.status.eql? "Ready for Review") %>
         if (selected == "Ready for Review") {
           <%= @count = 5 - @post.reviews.where(status: "Rejected").count %>
