--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -271,6 +271,10 @@ hr {
   margin-right: auto;
 }
 
+.float_right {
+  float: right;
+}
+
 ///////////////////////////////////////////////////////////////////////////
 .link_white {
   color: white;
@@ -279,6 +283,24 @@ hr {
   &:hover {
     color: white;
     text-decoration: none;
+  }
+}
+
+.link_pink {
+  color: #FF78CB;
+  font-weight: bolder;
+  font-family: "Playfair Display";
+  &:hover {
+    color: #FF78CB;
+    text-decoration: none;
+  }
+}
+
+.link_nrml {
+  color: black;
+  font-weight: 400;
+  &:hover {
+    color: #545454 !important;
   }
 }
 
@@ -506,6 +528,25 @@ hr {
     height: 35px;
     margin: 15px 0;
   }
+}
+
+.flex_horizontal_justify_between {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  * {
+    margin: 0 !important;
+    max-width: fit-content;
+  }
+}
+
+.no_style {
+  border: none !important;
+  padding: 0px !important;
+  background: transparent !important;
 }
 
 .parentflex {
@@ -823,6 +864,7 @@ input[type="submit"] {
   &:hover {
     border: 2px solid #65B19D;
     color: #65B19D;
+    cursor: pointer;
   }
 }
 
