--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -92,6 +92,15 @@
 .review_frm {
   background-color: #FFFBDA;
   margin-bottom: 1.5em;
+  h6 {
+    font-family: 'Univers-CnUlt', "Arial", "Sans-serif";
+  }
+  b {
+    color: #FF78CB;
+  }
+  hr {
+    margin: 20px -20px;
+  }
   input {
     margin: 0.5em 0;
   }
