--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -1,4 +1,13 @@
-<div class="skinny_wrapper wrapper_padding">
-  <h5>Edit feedback field</h5>
+<div class="page skinny_wrapper wrapper_padding">
+  <br>
+  <i style="background-color: yellow">If you think this feedback field can be more helpful, please update it here. Be as descriptive as possible
+    while keeping the feedback generic so that it can be used for other articles. Remember that as soon as you save, the feedback form
+    will be updated for all editors.</i>
+  <br><br>
+  <div class="flex_horizontal_justify_between">
+    <h3>Edit Feedback Field</h3>
+    <h6><%= link_to("Go back to list", feedbacks_path) %></h6>
+  </div>
+  <br>
   <%= render "/feedbacks/form" %>
 </div>
