--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -6,7 +6,7 @@
   <br><br>
   <div class="flex_horizontal_justify_between">
     <h3>Edit Feedback Field</h3>
-    <h6><%= link_to("Go back to list", feedbacks_path) %></h6>
+    <h6><%= link_to("Go back to list", feedbacks_path, class: "link_pink") %></h6>
   </div>
   <br>
   <%= render "/feedbacks/form" %>
