--- a/app/views/reviews/_post_reviews.html.erb
+++ b/app/views/reviews/_post_reviews.html.erb
@@ -7,8 +7,8 @@
   <% end %>
     <div class="card mb-3 changes_requested">
       <div class="card-header">
-        <% @editor = User.find(review.editor_id) %>
-        Review #<%= index + 1 %> given by <%= link_to(@editor.full_name, @editor, :class => "link_nrml", :target => "_blank") %>
+        <% @editor = User.where(id: review.editor_id).first %>
+        Review #<%= index + 1 %> given by <%= link_to(@editor.try(:full_name), @editor, :class => "link_nrml", :target => "_blank") %>
         <% if current_user.editor? %>
           <%= link_to review_path(review), method: :delete, :data => {confirm: "Are you sure you want to delete this review?"} do %>
             <i class="fa fa-times" style="color: black;"></i>
