--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -84,9 +84,7 @@
       <% end %>
       <% @reviews = @post.reviews.where(status: "Rejected") %>
       <% if (@reviews.count >= 5) && !(@post.is_published?) %>
-        <%= rv.select :status, options_for_select((["In Progress"] << @review.try(:status)).uniq, @review.try(:status)) %>
-        <br>
-        <br>
+        <%= rv.hidden_field :status, :value => "In Progress" %>
       <% else %>
         <%= f.label "Article Status:" %>
         <% @rejected_cnt = @post.reviews.where(status: "Rejected").count %>
