--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -105,7 +105,7 @@
         <% end %>
       <% end %>
     <% end %>
-    <%= f.submit "Save Changes", :class => "button" %>
+    <%= f.submit "Save Changes" %>
   <% end %>
 </div>
 <% else %>
