--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,8 +1,7 @@
 <% @most_recent_review = @post.reviews.where.not(status: "In Progress").last %>
 <% @review_banner_soft = @post.reviews.where.not(status: nil).last %>
-<style>.banner_stts {position: relative}</style>
 <% if !@most_recent_review.nil? && !(@review_banner_soft.status.eql? "In Progress") %>
-  <%= render '/posts/banner_status' %>
+  <div class="banner_stts_relative"><%= render '/posts/banner_status' %></div>
 <% elsif @post.pitch.present? %>
   <p class= "banner_stts">In Progress | Review this draft's pitch <%= link_to("here", @post.pitch, target: "_blank", class: "link_white") %></p>
 <% else %>
