--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -244,6 +244,9 @@ $gray:  #2a2a2a;
          font-size: 45px;
        }
      }
+     .content_wrapper {
+       max-width: 100%;
+     }
    }
 }
 
