--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -177,6 +177,11 @@
 
 .analytics {
   margin: 0 20px 20px 0;
+  .card {
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    border: 1px white solid;
+  }
 }
 
 .thumbnail_img {
