added search and fixed css

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -250,6 +250,10 @@
   }
 }
 
+.date_wrapper {
+  bottom: 10px !important;
+}
+
 #edit--profile {
   .add_link input {
     margin-left: 0px !important;
