--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,7 +1,38 @@
-<%= stylesheet_link_tag 'mdbootstrap/bootstrap.min.css', media: 'all' %>
-<%= stylesheet_link_tag 'mdbootstrap/mdb.min.css', media: 'all' %>
-<%= stylesheet_link_tag 'mdbootstrap/style.css', media: 'all' %>
-<!-- Search form -->
-<div class="md-form active-pink-2 mb-3">
-  <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-</div>
+  <div class="category">
+    <div class="category--show">
+     <div class="other--articles">
+       <div class="flex">
+          <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-center md-form form-sm active-theme-2 mt-2'}) do |f| %>
+            <%= f.text_field :query, class: "form-control form-control-sm mr-3 w-75", placeholder: "Searching in All Articles" %>
+            <%= button_tag(class: "btn_no_style") do %>
+              <i class="fa fa-search" aria-hidden="true"></i>
+            <% end %>
+          <% end %>
+          <div class="container">
+             <% if @query.present? %>
+               <h2>Searching for... <span style="background-color: yellow"><%= @query %></span></h2>
+               <br>
+             <% end %>
+             <% @posts.each do |post| %>
+               <div class="thumbnail">
+                 <div class="container--image">
+                   <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
+                 </div>
+                 <div class="thumbnail--container">
+                   <p class="date_post_preview"><%= post.category.name %></p>
+                   <h3 class="article_title"><%= link_to post.title, post %></h3>
+                   <p class="date_post_preview"><%= post.publish_at.strftime("%A, %b %d")%></p>
+                 </div>
+               </div>
+             <% end %>
+             <% if @posts.count.eql? 0 %>
+                <p>Your search did not have any results.</p>
+             <% end %>
+           </div>
+           <a class="apply" href="/apply" target="blank">
+           </a>
+         </div>
+       <%= will_paginate @posts %>
+     </div>
+    </div>
+  </div>
