--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -62,6 +62,13 @@ iframe {
   color: #65B19D !important;
 }
 
+.btn_no_style {
+  padding: 0;
+  background: transparent;
+  margin: 0;
+  border: none;
+}
+
 body {
   font-family: 'Charter',Georgia,Times,Serif;
   max-width: 100% !important;
@@ -616,12 +623,15 @@ body {
 
   .right_side_wrapper {
     text-align: right;
+    .draft {
+      height: 100%;
+    }
     .date_wrapper {
       display: flex;
       align-items: center;
       justify-content: flex-end;
       p {
-        margin: 0.7em 0 0.5em 0;
+        margin: 0.6em 0;
       }
     }
   }
@@ -640,7 +650,6 @@ body {
   }
 
   .social_icons {
-    margin-bottom: 0.5em;
     display: flex;
     flex-direction: row;
     min-width: 175px;
@@ -773,7 +782,7 @@ footer {
       cursor: pointer;
     }
     .fa {
-      font-size: 20px;
+      font-size: 16px;
     }
     .fa-twitter {
       color: #00aced;
@@ -786,6 +795,9 @@ footer {
     }
     .fa-facebook-official {
       color: #3b5998;
+    }
+    .fa-search {
+      color: #212529;
     }
   }
 
