--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -235,6 +235,17 @@ $gray:  #2a2a2a;
   }
 }
 
+// Search bar
+
+.active-theme-2 input.form-control[type=text]:focus:not([readonly]) {
+  border-bottom: 1px solid #65B19D;
+  box-shadow: 0 1px 0 0 #65B19D;
+}
+
+.active-theme .fa, .active-theme-2 .fa {
+  color: #65B19D;
+}
+
 @media (max-width: 1200px) {
    .skinny {
      margin-left: 20px;
@@ -283,7 +294,15 @@ $gray:  #2a2a2a;
   }
 }
 
-@media (min-width: 640px) {
+@media (min-width: 650px) {
+  .right_side_wrapper {
+    height: fit-content;
+    margin: auto;
+    margin-right: 0;
+    .social_icons {
+      padding-bottom: 0.7em;
+    }
+  }
   .right_side_flex {
     display: flex;
     flex-direction: row;
@@ -294,6 +313,7 @@ $gray:  #2a2a2a;
       margin: 0.5em;
       margin-right: 0;
       margin-left: 10px;
+      padding-bottom: 0 !important;
     }
     .date_wrapper {
       margin: 0;
@@ -301,14 +321,19 @@ $gray:  #2a2a2a;
   }
 }
 
-@media (max-width: 640px) {
-  .post_info {
+@media (max-width: 650px) {
+  .post_info_published {
     flex-direction: column !important;
     .left_side_flex {
       flex-direction: column;
     }
     .right_side_wrapper {
-      margin-top: -57px;
+      .published {
+        max-width: fit-content;
+        position: absolute;
+        right: 20px;
+        bottom: 65px;
+      }
     }
     .social_icons {
       margin: 10px 0;
@@ -415,13 +440,40 @@ $gray:  #2a2a2a;
   }
 }
 
+@media (max-width: 420px) {
+  .post_info {
+    flex-direction: column !important;
+    .right_side_wrapper {
+      .draft {
+        position: relative !important;
+        max-width: fit-content;
+        height: fit-content !important;
+        p {
+          margin-top: 0;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 550px) {
   .post_info {
     p, i {
       font-size: 14px !important;
     }
     .right_side_wrapper {
-      margin-top: -43px;
+      position: relative;
+      min-width: 150px;
+      .published {
+        bottom: 53px;
+        right: 0;
+      }
+      .draft {
+        height: 45px;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+      }
     }
     .social_icons {
       margin-top: 0px;
@@ -432,17 +484,14 @@ $gray:  #2a2a2a;
   }
 }
 
-@media (max-width: 400px) {
-  .right_side_wrapper {
-    margin-top: -10px !important;
-    .date_wrapper {
-      justify-content: flex-start !important;
-    }
-  }
-  .post_info .right_side_flex {
-    margin-top: -43px !important;
-    .date_wrapper {
-      justify-content: flex-end !important;
+@media (max-width: 370px) {
+  .post_info .right_side_wrapper .published {
+    position: relative !important;
+    bottom: 0;
+    right: 0;
+    line-height: normal;
+    p {
+      margin-top: 0;
     }
   }
 }
