--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -2,13 +2,13 @@
     <div class="category--show">
      <div class="other--articles">
        <div class="flex">
-          <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-center md-form form-sm active-theme-2 mt-2'}) do |f| %>
-            <%= f.text_field :query, class: "form-control form-control-sm mr-3 w-75", placeholder: "Searching in All Articles" %>
-            <%= button_tag(class: "btn_no_style") do %>
-              <i class="fa fa-search" aria-hidden="true"></i>
-            <% end %>
-          <% end %>
           <div class="container">
+            <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-left md-form form-sm active-theme-2 mt-2'}) do |f| %>
+              <%= f.text_field :query, class: "form-control form-control-sm mr-3", style: "flex: 1;", placeholder: "Searching in All Articles" %>
+              <%= button_tag(class: "btn_no_style") do %>
+                <i class="fa fa-search" aria-hidden="true"></i>
+              <% end %>
+            <% end %>
              <% if @query.present? %>
                <h2>Searching for... <span style="background-color: yellow"><%= @query %></span></h2>
                <br>
