added search icon to minimal layout

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -26,7 +26,7 @@
                </div>
              <% end %>
              <% if @posts.count.eql? 0 %>
-                <p>Your search did not have any results.</p>
+                <p style="margin-top: -10px;">Your search did not have any results.</p>
              <% end %>
            </div>
            <a class="apply" href="/apply" target="blank">
