fix annoying css navigation bug

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -5,6 +5,7 @@
 @import "userprofile";
 @import "pages";
 @import "analytics";
+@import "posts_projects";
 
 @media (max-width: 980px) {
    .nav-title {
